--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,8 @@
-tensorflow
+plotnine
 matplotlib
 numpy
+pandas
 pillow
 ipython
-tensorflow-datasets
 ipywidgets
-git+https://github.com/tensorflow/examples.git
 pydot
